# autopr-engine

./: .bandit  .cursorrules  .flake8  .flake8.test  .gitignore  .markdownlint.json  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  .windsurfrules  CONFIGURATION_EXTRACTION.md  Dockerfile  README.md  ai_interactions_export.json  ai_linting_attempts.json  ai_linting_interactions.db  autopr-engine.code-workspace  build_system_validation_report.txt  check_markdown.py  config_validation_report.txt  demo_hybrid_templates.py  docker-compose.yml  final_test.md  find_markdown_files.py  import_validation_report.txt  link_validation_report.txt  mypy.ini  plan.md  platform_validation_report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  template_catalog.md  template_validation_report.txt  test_llm_modular.py  test_python_hooks.py
.continue/rules/: CONTINUE.md  new-rule.md
.cursor/rules/: ai-analysis-algorithms.mdc  data-flow-integration.mdc  metrics-collection-model.mdc  platform-detection-engine.mdc
.devcontainer/: devcontainer.json  docker-compose.override.yml  postcreate.sh
.early.coverage/python/: coverage.json
.giga/: specifications.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  quality.yml
.windsurf/rules/: autopr-engine.md  bicep.md  c-sharp.md  markdown.md  powershell.md  rules-typescript.md  solidity.md  sql.md  terraform.md  typescript.md
autopr/: PLAN.md  __init__.py  engine.py  exceptions.py
autopr/actions/: __init__.py  ai_comment_analyzer.py  ai_linting_fixer.py  analyze_console_logs.py  apply_git_patch.py  autogen_implementation.py  autogen_multi_agent.py  base.py  check_dependency_licenses.py  check_lockfile_drift.py  check_performance_budget.py  configurable_llm_provider.py  create_github_release.py  create_or_update_issue.py  delete_branch.py  enforce_import_order.py  extract_pr_comment_data.py  find_dead_code.py  find_large_assets.py  find_merged_branches.py  find_stale_issues_or_prs.py  generate_barrel_file.py  generate_prop_table.py  generate_release_notes.py  generate_todo_report.py  handle_pr_comment.py  issue_creator.py  label_pr.py  label_pr_by_size.py  learning_memory_system.py  mem0_memory_integration.py  multi_platform_integrator.py  platform_detector.py  platform_detector_enhanced.py  post_comment.py  pr_review_analyzer.py  prototype_enhancer.py  publish_package.py  quality_engine.py  quality_gates.py  (+19 more)
autopr/ai/: base.py  implementation_roadmap.py
autopr/clients/: __init__.py  github_client.py  linear_client.py
autopr/config/: __init__.py  cli.py  settings.py  triggers.yaml  validation.py  workflows.yaml
autopr/evaluation/: metrics_collector.py
autopr/extensions/: implementation_roadmap.py
autopr/integrations/: __init__.py  axolo_integration.py  base.py  registry.py
autopr/models/: __init__.py  artifacts.py  base.py  config.py  events.py
autopr/quality/: base.py  metrics_collector.py
autopr/security/: auth.py  authentication.py  encryption.py  input_validation.py  validation_models.py  zero-trust.py
autopr/templates/: __init__.py  base.py  template_manager.py
autopr/tests/: utils.py
autopr/workflows/: __init__.py  base.py  branch_cleanup.yaml  changelog_updater.yaml  engine.py  enhanced_pr_comment_handler.yaml  error_handler_workflow.py  pr_comment_handler.yaml  pr_size_labeler.yaml  security_audit.yaml  stale_issue_closer.yaml  tech_debt_report.yaml  temporal_ai_linting.py  update_documentation.yaml
autopr_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
build-artifacts/: ruff_auto_fix_history.json
configs/: README.md  config.yaml  mypy.ini
configs/phases/: implementation_phases.yaml
configs/tasks/: implementation_tasks.yaml
configs/triggers/: main-triggers.yaml
configs/workflows/: ai_linting_fixer.yaml  automated_dependency_update.yaml  branch_cleanup.yaml  changelog_updater.yaml  dead_code_report.yaml  enhanced_pr_comment_handler.yaml  magic_fix.yaml  onboard_contributor.yaml  phase1_pr_review_workflow.yaml  phase2-rapid-prototyping.yaml  phase2_rapid_prototyping.yaml  pr_comment_handler.yaml  pr_size_labeler.yaml  quality_gate.yaml  release_drafter.yaml  scaffold_component_workflow.yaml  screenshot_gallery.yaml  stale_issue_closer.yaml  tech_debt_report.yaml
docs/: AI_BOTS_ECOSYSTEM_ANALYSIS.md  ARCHITECTURE.md  AUTOPR_ENHANCED_SYSTEM.md  CODE_QUALITY.md  CONFIGURATION_EXTRACTION.md  PLAN.md  PYTHON_313_UPGRADE.md  README.md  ROADMAP.md  WINDOWS_DEVELOPMENT.md  ai_linting_fixer.md  autopr_autoweave_integration.md  modularization_plan.md  packages.md  platform_detection.md  template-packaging-plan.md  template_catalog.md
docs/adr/: 0001-hybrid-csharp-python-architecture.md  0002-grpc-communication.md  0003-plugin-system-architecture.md  0004-api-versioning-strategy.md  0005-configuration-management.md  0006-plugin-system-design.md  0007-authn-authz.md  0008-event-driven-architecture.md  0009-error-handling-strategy.md  0010-monitoring-observability.md  0011-data-persistence-strategy.md  0012-deployment-strategy.md  0013-security-strategy.md  0014-caching-strategy.md  0015-testing-strategy.md  0016-documentation-strategy.md  0017-on-call-incident-response.md
docs/ai-bots-ecosystem/: README.md  autopr-repo-migration-analysis.md  (+16 more)
examples/: error_handler_usage.py
markdown_lint/: README.md  __main__.py  cli.py  linter.py  models.py  requirements.txt  setup.py
scripts/: README.md  audit-config.js  check-changes.sh  commit.bat  comprehensive-commit.ps1  find-theme-hook-usage.js  type-check-info.sh  update-theme-imports.js  validate_build_system.py  validate_configs.py  validate_imports.py  validate_links.py  validate_platforms.py  validate_templates.py
templates/: NO_CODE_PLATFORM_PLAN.md  ONBOARDING_STRATEGY.md  README.md
tests/: conftest.py  test_llm_providers.bat  test_llm_providers.py  test_platform_detection.py  test_template_system.py
tools/: __init__.py  check_markdown.py  consolidation.py  demo_hybrid_templates.py  find_markdown_files.py  linter.py  pre-commit-hooks.py  production_monitoring.py
(+336 files in other folders)
